--- a/HoldTheLine/HoldTheLine.csproj
+++ b/HoldTheLine/HoldTheLine.csproj
@@ -119,7 +119,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Resources\savefile.xml" />
+    <Content Include="Resources\savefile.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
