--- a/HoldTheLine/HoldTheLine.csproj
+++ b/HoldTheLine/HoldTheLine.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -119,9 +119,16 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Resources\savefile.xml">
+    <Content Include="Resourcee\HTLMapBack.png" />
+    <Content Include="Resourcee\HTLMapFront.png" />
+    <Content Include="Resourcee\Idle.png" />
+    <Content Include="Resourcee\L.png" />
+    <Content Include="Resourcee\Lo.png" />
+    <Content Include="Resourcee\savefile.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resourcee\WalkingLeft.png" />
+    <Content Include="Resourcee\WalkingRight.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
