--- a/HoldTheLine/HoldTheLine.csproj
+++ b/HoldTheLine/HoldTheLine.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Screens\GameOverScreen.resx">
       <DependentUpon>GameOverScreen.cs</DependentUpon>
@@ -119,16 +120,17 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Resourcee\HTLMapBack.png" />
-    <Content Include="Resourcee\HTLMapFront.png" />
-    <Content Include="Resourcee\Idle.png" />
-    <Content Include="Resourcee\L.png" />
-    <Content Include="Resourcee\Lo.png" />
-    <Content Include="Resourcee\savefile.xml">
+    <Content Include="Resources\HTLMapBack.png" />
+    <None Include="Resources\HTLMapFront %281%29.png" />
+    <Content Include="Resources\HTLMapFront.png" />
+    <Content Include="Resources\Idle.png" />
+    <Content Include="Resources\L.png" />
+    <Content Include="Resources\Lo.png" />
+    <Content Include="Resources\savefile.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resourcee\WalkingLeft.png" />
-    <Content Include="Resourcee\WalkingRight.png" />
+    <Content Include="Resources\WalkingLeft.png" />
+    <Content Include="Resources\WalkingRight.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
