--- a/HoldTheLine/HoldTheLine.csproj
+++ b/HoldTheLine/HoldTheLine.csproj
@@ -124,12 +124,13 @@
     <Content Include="Resources\HTLMapFront.png" />
     <Content Include="Resources\Idle.png" />
     <Content Include="Resources\L.png" />
+    <Content Include="Resources\Left.png" />
     <Content Include="Resources\Lo.png" />
+    <None Include="Resources\NPCIdle.png" />
+    <Content Include="Resources\Right.png" />
     <Content Include="Resources\savefile.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\WalkingLeft.png" />
-    <Content Include="Resources\WalkingRight.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
